# parsing-graph

./: .env.example  .gitignore  DEVELOPMENT.md  LOCAL_SETUP.md  README.md  docker-compose.yml  install-dependencies.bat  pyproject.toml  start-all.bat  start-backend.bat  start-frontend.bat
backend/: __init__.py  config.py  main.py
backend/api/: __init__.py  documents.py  main.py  parsing.py  simple_parsing.py  system.py
backend/clients/: __init__.py  mcp_client.py  openai_client.py  openrouter_client.py
backend/langgraph/: __init__.py  graph.py  nodes.py
backend/models/: __init__.py  schemas.py  state.py
backend/prompts/: __init__.py  insurance_prompts.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: Dashboard.tsx  DocumentDetail.tsx  DocumentList.tsx  ParseResult.tsx  SystemStatus.tsx
scripts/: start-backend.py  start-frontend.js
