[tool.poetry]
name = "parsing-graph"
version = "0.1.0"
description = "LangGraph 기반 보험약관 PDF 파싱 시스템"
authors = ["AI-Dev Agent"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111"
uvicorn = "^0.30"
langgraph = "^0.2"
langchain = "^0.2"
langchain-openai = "^0.1"
openai = "^1.40"
pydantic = "^2.8"
pydantic-settings = "^2.4"
httpx = "^0.27"
PyMuPDF = "^1.23.26"
sqlalchemy = "^2.0"
alembic = "^1.13"
redis = "^5.0"
psycopg2-binary = "^2.9"
python-multipart = "^0.0.9"
python-jose = "^3.3.0"
bcrypt = "^4.2"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
black = "^24.8"
isort = "^5.13"
flake8 = "^7.1"
mypy = "^1.11"
pre-commit = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=backend --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"